syntax = "proto3";

package greeter;

service Greeter {

  rpc SayHello(HelloRequest) returns (HelloResponse);
  rpc SayStHello(stream HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
